--- a/04-image_compressor/image-compressor/stack.yaml
+++ b/04-image_compressor/image-compressor/stack.yaml
@@ -17,8 +17,9 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/17/12.yaml
+# resolver:
+#   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/17/12.yaml
+resolver: 'lts-14.11'
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
