--- a/04-image_compressor/image-compressor/image-compressor.cabal
+++ b/04-image_compressor/image-compressor/image-compressor.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8d903f7f85d0e5795a02d6ba404fa05a1009baedc89c5fba59ebde739b62b69a
+-- hash: 7f72493a2462d2ed343f1545c0bccea6dcb3097334c923c03316f17bda89e057
 
 name:           image-compressor
 version:        0.1.0.0
@@ -44,9 +44,9 @@ executable image-compressor-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      JuicyPixels
+    , base >=4.7 && <5
     , image-compressor
-    , random
   default-language: Haskell2010
 
 test-suite image-compressor-test
