--- a/04-image_compressor/image-compressor/package.yaml
+++ b/04-image_compressor/image-compressor/package.yaml
@@ -35,7 +35,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - image-compressor
-    - random
+    - JuicyPixels
 
 tests:
   image-compressor-test:
